--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,9 +1,9 @@
 :root {
-  --blue: #273FAD;
+  --blue: #506ce9;
   --green: #3FAD27;
   --red: 	#ad273f;
   --background: #EBEBEB;
-  --shapes: #FFFFFF;
+  --shapes: #ffffff;
   --text-title: #3D3D4D;
   --text: #1C1C29;
   --text-light: #A09CB1;
@@ -18,6 +18,7 @@
 body {
   font: 16px "Poppins", Arial, sans-serif;
   color: #121214;
+  background: rgb(161, 161, 161);
 }
 
 input, textarea {
