--- a/src/styles/tasklist.scss
+++ b/src/styles/tasklist.scss
@@ -23,7 +23,7 @@ section.task-list {
       gap: 0.25rem;
       align-items: center;
 
-      background: #fff;
+      background: var(--shapes);
       font-size: 16px;
       
       input {
